# markovsan

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: sample.txt
src/markovsan/: __init__.py  __main__.py  markov.py
tests/: test_markov.py
