[project]
name = "markovsan"
version = "0.1.0"
description = "Text generation using Markov chains from text files"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["markov", "text-generation", "nlp"]
license = {file = "LICENSE"}

dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "black>=24.1.0",
    "flake8>=7.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ipython>=8.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "black",
    "flake8",
    "pytest",
    "pytest-cov",
    "ipython",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=html"

[tool.coverage.run]
source = ["src"]
